Fix dependencies and clean up naming