@@ -45,6 +45,16 @@
 
       <!-- Test dependencies -->
       <dependency>
+         <groupId>org.eclipse.esmf</groupId>
+         <artifactId>esmf-aspect-model-validator</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.eclipse.esmf</groupId>
+         <artifactId>esmf-test-resources</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter</artifactId>
          <scope>test</scope>
@@ -52,11 +62,6 @@
       <dependency>
          <groupId>org.assertj</groupId>
          <artifactId>assertj-core</artifactId>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.eclipse.esmf</groupId>
-         <artifactId>esmf-test-resources</artifactId>
          <scope>test</scope>
       </dependency>
       <dependency>
@@ -87,6 +92,9 @@
                      <version>${record-builder-version}</version>
                   </path>
                </annotationProcessorPaths>
+               <source>21</source>
+               <target>21</target>
+               <compilerArgs>--enable-preview</compilerArgs>
             </configuration>
          </plugin>
       </plugins>
